...
            "state": "translated",
            "value": "Найдено в вашем аккаунте"
          }
        }
      }
    },
    "Free keeps up to 3 cars. Archive one to add another.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Free keeps up to 3 cars. Archive one to add another."
...
            "state": "translated",
            "value": "Ещё…"
          }
        }
      }
    },
    "My garage": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "My garage"
...
            "state": "translated",
            "value": "Новое напоминание"
          }
        }
      }
    },
    "Reminders": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reminders"
...
            "state": "translated",
            "value": "Использовать"
          }
        }
      }
    },
    "Vehicle": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Vehicle"
...
